[project]
name = "notebook"
version = "0.0.0"
description = "Python code corresponding to my math notebook"
license = "Unlicense"
readme = "README.md"
requires-python = ">=3.14, <4.0"
authors = [
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]

[project.urls]
Repository = "https://github.com/v--/notebook.git"

[project.optional-dependencies]
commands = [
  "click (>=8.3)",
  "loguru (>=0.7)",
]

watcher = [
  "notebook[commands]",
  "asyncinotify (>=4.4)",
  "texoutparse @ git+https://github.com/v--/texoutparse.git"
]

bibtools = [
  "notebook[commands]",
  "iso639-lang (>=2.6.3)",
  "nameparser (>=1.1.3)",
  "pydantic (>=2.12)",
  "python-stdnum (>=2.2)",
  "stop-words (>=2025.11.4)",
  "titlecase (>=2.4.1)",
  "xsdata (>=26)",
]

figures = [
  "numpy (>=2.4)",
  "pillow (>=12.2.0)",
]

all = [
  "notebook[commands, watcher, bibtools, figures]"
]

[project.scripts]
watcher = "notebook.commands.watcher:watch"
format-matrices = "notebook.commands.format_matrices:format_matrices"
bibtools = "notebook.commands.bibtools:bibtools"
find-obsolete-figures = "notebook.commands.find_obsolete_figures:find_obsolete_figures"
coderefs = "notebook.commands.coderefs:coderefs"

[dependency-groups]
dev = [
  "beautifulsoup4 (>=4.14)",
  "coverage (>=7.13)",
  "mypy (>=2)",
  "poethepoet (>=0.42)",
  "pytest (>=9.0.3)",
  "pytest-benchmark (>=5.2)",
  "pytest-loguru (>=0.4)",
  "pytest-xdist (>=3.8)",
  "ruff (>=0.15)",
  "types-beautifulsoup4 (>=4.12.0.20250516)",
  # Workeround for installing extras by default; based on
  #   https://github.com/astral-sh/uv/issues/8607#issuecomment-2540156984
  "notebook[all] (>=0.0.0)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15post7",
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

[tool.uv]
resolution = "lowest-direct"

# poe
[tool.poe]
include = "./poe.toml"

[tool.poe.tasks.benchmark]
cmd = "pytest --config-file pytest_benchmark.ini"

# pytest
[tool.pytest]
addopts = ["--capture", "tee-sys"]

# coverage
[tool.coverage.run]
omit = ["test_*", "conftest.py", "__init__.py", "exceptions.py"]
command_line = "-m pytest"

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"
preview = true

[tool.ruff.lint]
ignore = [
  "D1",      # undocumented-*
  "PLR6301", # no-self-use
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
  "E241",    # multiple-spaces-after-comma (we use table-like formatting in tests)
  "PT028",   # pytest-parameter-with-default-argument (default arguments are convenient)
]

# mypy
[tool.mypy]
packages = ["notebook"]

[[tool.mypy.overrides]]
module = [
  "asyncinotify.*",
  "iso639.*",
  "loguru.*",
  "nameparser.*",
  "pytest_benchmark.*",
  "pytest_loguru.*",
  "stop_words.*",
  "texoutparse.*",
  "titlecase.*"
]
ignore_missing_imports = true
