[project]
name = "notebook"
version = "0.0.0"
description = "Python code corresponding to my math notebook"
license = "Unlicense"
license-files = ["LICENSES/Unlicense.txt"]
readme = "README.md"
requires-python = ">=3.15"

authors = [
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]

classifiers = [
  "Private :: Do Not Upload",
]

[project.urls]
Repository = "https://github.com/v--/notebook.git"

[project.optional-dependencies]
commands = [
  "click (>=8.3)",
  "colorlog (>=6.8)",
]

watcher = [
  "asyncinotify (>=4.4)",
  "notebook[commands]",
  "texoutparse @ git+https://github.com/v--/texoutparse.git"
]

bibtools = [
  "beautifulsoup4 (>=4.14)",
  "iso639-lang (>=2.6.3)",
  "msgspec (>=0.21.1)",
  "nameparser (>=1.2)",
  "notebook[commands]",
  "python-stdnum (>=2.2)",
  "stop-words (>=2025.11.4)",
  "titlecase (>=2.4.1)",
  "transliterate (>=1.10.2)",
  "xsdata (>=26)",
]

figures = [
  "numpy (>=2.4.6)",
  "pillow (>=12.2.0)",
]

all = [
  "notebook[commands, watcher, bibtools, figures]"
]

[project.scripts]
bibtools = "notebook.commands.bibtools:bibtools"
coderefs = "notebook.commands.coderefs:coderefs"
find-obsolete-figures = "notebook.commands.find_obsolete_figures:find_obsolete_figures"
format-matrices = "notebook.commands.format_matrices:format_matrices"
watcher = "notebook.commands.watcher:watch"

[dependency-groups]
dev = [
  "coverage (>=7.13)",
  "mypy (>=2.2)",
  "notebook[all] (>=0.0.0)",
  "poethepoet (>=0.42)",
  "pytest (>=9.0.3)",
  "pytest-benchmark (>=5.2)",
  "pytest-xdist (>=3.8)",
  "ruff (>=0.15.22)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15.post9",
  "types-beautifulsoup4 (>=4.12.0.20250516)",
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

[tool.uv]
resolution = "lowest-direct"

[tool.uv.build-backend]
source-include = ["REUSE.toml"]

# coverage
[tool.coverage.run]
omit = ["test_*", "conftest.py", "__init__.py", "exceptions.py"]
command_line = "-m pytest"

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"
preview = true

[tool.ruff.lint]
ignore = [
  # undocumented-*
  "D1",

  # We prefer lazy imports to `if TYPE_CHECKING` blocks.
  "typing-only-first-party-import",
  "typing-only-third-party-import",
  "typing-only-standard-library-import",
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
  # We use table-like formatting in tests.
  "multiple-spaces-after-comma",

  # Default arguments are convenient.
  "pytest-parameter-with-default-argument",
]

# mypy
[tool.mypy]
packages = ["notebook"]

[[tool.mypy.overrides]]
module = [
  "pytest_benchmark.*",
  "stop_words.*",
  "texoutparse.*",
  "titlecase.*",
  "transliterate.*"
]
ignore_missing_imports = true
