# poetry
[tool.poetry]
name = "notebook"
version = "1.0.0"
description = "Python code corresponding to my math notebook"
authors = ["Ianis Vasilev <ianis@ivasilev.net>"]
license = "Unlicense"
packages = [
  { include = "notebook" },
  { include = "commands" }
]

[tool.poetry.dependencies]
python = "^3.13"
texoutparse = { git = "https://github.com/v--/texoutparse.git", optional = true }
asyncinotify = { version = "^4.2.0", optional = true }
click = { version = "^8.1.7", optional = true }
iso639-lang = { version = "^2.5.1", optional = true }
loguru = { version = "^0.7.2", optional = true }
many-stop-words = { version = "^0.2.2", optional = true }
nameparser = { version = "^1.1.3", optional = true }
pydantic = { version = "^2.10.3", optional = true }
python-stdnum = { version = "^1.20", optional = true }
stop-words = { version = "^2018.7.23", optional = true }
xsdata = { version = "^24.11", optional = true }
titlecase = { version = "^2.4.1", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
ruff = "^0.8.3"
coverage = "^7.6.9"
pytest-loguru = "^0.4.0"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20241020"

[tool.poetry.group.commands.dependencies]
xvfbwrapper = "^0.2.9"

[tool.poetry.extras]
bibtools = ["click", "iso639-lang", "loguru", "many-stop-words", "nameparser", "pydantic", "python-stdnum", "stop-words", "titlecase", "xsdata"]
watcher = ["texoutparse", "asyncinotify", "click", "loguru"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# poe
[tool.poe]
include = "./poe.toml"

[tool.poe.tasks.watcher]
cmd = "python -m commands.watcher"
cwd = ".."

[tool.poe.tasks.format-matrices]
cmd = "python -m commands.format_matrices"
cwd = ".."

[tool.poe.tasks.bibtools]
cmd = "python -m commands.bibtools"
cwd = ".."

[tool.poe.tasks.find-obsolete-figures]
cmd = "python -m commands.find_obsolete_figures"
cwd = ".."

[tool.poe.tasks.checkcites]
shell = "cd ..; checkcites --backend biber --all aux/notebook.bcf"

# pytest
[tool.pytest.ini_options]
addopts = "--capture tee-sys"
testpaths = "notebook commands"

# ruff
[tool.ruff]
extend = "./ruff.toml"

# mypy
[tool.mypy]
packages = ["notebook", "commands"]

[[tool.mypy.overrides]]
module = [
  "asyncinotify.*",
  "iso639.*",
  "loguru.*",
  "many_stop_words.*",
  "nameparser.*",
  "pytest_loguru.*",
  "stdnum.*",
  "stop_words.*",
  "texoutparse.*",
  "titlecase.*",
  "xvfbwrapper.*"
]
ignore_missing_imports = true
